--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    useLibrary 'org.apache.http.legacy'
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
@@ -24,5 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile files('libs/tess-two.jar')
     compile project(':openCVLibrary300')
-
+    compile files('libs/microsoft-translator-java-api-0.6.2-jar-with-dependencies.jar')
 }
