--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:label="@string/title_activity_main2"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name=".Main22Activity"
+            android:label="@string/title_activity_main22" >
+        </activity>
     </application>
 
 </manifest>
