--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".Main22Activity"
             android:label="@string/title_activity_main22" >
         </activity>
+        <activity
+            android:name=".Main23Activity"
+            android:label="@string/title_activity_main23" >
+        </activity>
     </application>
 
 </manifest>
